--- a/views/host/lobby.ejs
+++ b/views/host/lobby.ejs
@@ -59,7 +59,7 @@
       //When server starts the game
       socket.on('gameStarted', function (id) {
         console.log('Game Started!');
-        window.location.href = '/host/game/' + '?id=' + id;
+        window.location.href = '/gameblock' + '?id=' + id;
       });
 
       // socket.on('noGameFound', function () {
