--- a/views/player/ingame.ejs
+++ b/views/player/ingame.ejs
@@ -42,7 +42,7 @@
 
       //When the host clicks start game, the player screen changes
       socket.on('gameStartedPlayer', function () {
-        window.location.href = '/playergameblock' + '?id=' + socket.id;
+        window.location.href = '/playergameblock' + '?id=' + socket.io.engine.id;
       });
     </script>
   </body>
