Add dropzone and implement questioncard

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,7 @@
     integrity="sha256-2zyNvUTezoJ3p/Kd78Ia/B5+UdtRtlQeRJSmFlHEn6Q="
     crossorigin="anonymous"
   />
-  <link rel="stylesheet" href="./stylesheets/style.css" />
+  <link rel="stylesheet" href="/stylesheets/style.css" />
 
   <link
     rel="stylesheet"
@@ -18,6 +18,6 @@
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
     crossorigin="anonymous"
   />
-  <link rel="icon" href="./images/logo.png" type="img" />
+  <link rel="icon" href="/images/logo.png" type="img" />
   <title>Welcome to MOOD</title>
 </head>
