--- a/views/partials/headerhome.ejs
+++ b/views/partials/headerhome.ejs
@@ -12,6 +12,6 @@
     crossorigin="anonymous"
   />
   <!--   <link rel="stylesheet" href="../stylesheets/stylehome.css" /> -->
-  <link rel="icon" href="./images/logo.png" type="img" />
+  <link rel="icon" href="/images/logo.png" type="img" />
   <title>Welcome to MOOD</title>
 </head>
