--- a/views/partials/questioncard.ejs
+++ b/views/partials/questioncard.ejs
@@ -18,7 +18,7 @@
  
      </div>
       <div class="col-6 col-lg-6 offset-1 offset-lg-1 ">
-        <div id="my-dropzone" class="dropzone  border-success border-1" data-tag="imgURL">   
+        <div id="my-dropzone<%= data.questionOrder %>" class="dropzone  border-success border-1" data-tag="imgURL">   
         </div>
     </div>
 
